--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
 # You can add one username per supported platform and one custom link
 patreon: henryzhu
-open_collective: # Replace with your Open Collective username
-ko_fi: # Replace with your Ko-fi username
-custom: # Replace with your custom donation URL
+github: hzoo
