--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-h5-audio-player": "^3.2.0",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "typeface-merriweather": "0.0.43",
