--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": "https://github.com/hzoo/hopeinsource.com/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.14",
+    "@mdx-js/react": "^1.6.14",
     "gatsby": "^2.24.4",
-    "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-feed": "^2.0.8",
+    "gatsby-plugin-mdx": "^1.2.28",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.16",
     "gatsby-plugin-typography": "^2.2.0",
@@ -21,7 +23,6 @@
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.9",
     "github-slugger": "^1.3.0",
     "prismjs": "^1.15.0",
