--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.14",
     "@mdx-js/react": "^1.6.14",
-    "gatsby": "^2.24.4",
+    "gatsby": "^2.24.37",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-mdx": "^1.2.28",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -19,9 +19,6 @@
     "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-sharp": "^2.1.9",
     "github-slugger": "^1.3.0",
@@ -37,7 +34,8 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "remark-html": "^12.0.0"
   },
   "homepage": "https://hopeinsource.com",
   "license": "MIT",
@@ -45,7 +43,7 @@
     "dev": "gatsby develop",
     "clean": "gatsby clean",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
-    "start": "npm run dev",
+    "start": "rm -rf .cache && gatsby develop",
     "build": "rm -rf public && rm -rf .cache && gatsby build"
   },
   "browserslist": {
