--- a/plugins/gatsby-remark-podcast-timestamp/package.json
+++ b/plugins/gatsby-remark-podcast-timestamp/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "mdast-util-to-string": "^1.1.0",
-    "unist-util-visit": "^2.0.3"
+    "unist-util-visit": "^2.0.3",
+    "unist-util-remove": "^2.0.0"
   },
   "peerDependencies": {
     "gatsby": "^2.0.0"
