--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-sharp": "^2.1.9",
     "github-slugger": "^1.3.0",
-    "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-h5-audio-player": "^3.2.0",
@@ -34,15 +33,13 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.14.2",
-    "remark-html": "^12.0.0"
+    "prettier": "^1.14.2"
   },
   "homepage": "https://hopeinsource.com",
   "license": "MIT",
   "scripts": {
     "dev": "gatsby develop",
     "clean": "gatsby clean",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
     "start": "rm -rf .cache && gatsby develop",
     "build": "rm -rf public && rm -rf .cache && gatsby build"
   },
