--- a/plugins/gatsby-remark-podcast-timestamp/package.json
+++ b/plugins/gatsby-remark-podcast-timestamp/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "main": "plugin.js",
   "scripts": {
-    "test": "yarn jest"
+    "test": "jest"
   },
   "dependencies": {
     "mdast-util-to-string": "^1.1.0",
