update: astro + import aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@/*": ["./src/*"],
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react",
