--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.0",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-helmet": "^6.1.11",
-    "astro": "^4.10.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "astro": "^5.2.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
-    "sharp": "^0.32.5",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "sharp": "^0.33.5",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/vite": "^4.0.6",
+    "@types/bun": "^1.2.2",
     "@types/mdast": "^4.0.4",
-    "@types/unist": "^3.0.3",
-    "bun-types": "^1.1.26"
+    "@types/unist": "^3.0.3"
   }
 }
