--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^6.0.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
     "astro": "^5.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.6",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/vite": "^4.0.6",
     "@types/bun": "^1.2.2",
     "@types/mdast": "^4.0.4",
-    "@types/unist": "^3.0.3"
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/unist": "^3.0.3",
+    "typescript": "^5.7.3"
   }
 }
