--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^6.0.0",
+    "@preact/signals-react": "^3.0.1",
     "astro": "^5.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
