redo all styles and posts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": [
+        "./src/*"
+      ]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "types": ["bun-types"]
+    "jsxImportSource": "preact",
+    "types": [
+      "bun-types"
+    ]
   }
 }
