--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^4.2.0",
+    "@astrojs/preact": "^4.0.4",
     "@astrojs/tailwind": "^6.0.0",
-    "@preact/signals-react": "^3.0.1",
-    "astro": "^5.2.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@preact/signals-core": "^1.8.0",
+    "astro": "5.3.0",
+    "preact": "^10.25.4",
     "sharp": "^0.33.5",
     "tailwindcss": "^4.0.6"
   },
@@ -36,8 +35,6 @@
     "@tailwindcss/vite": "^4.0.6",
     "@types/bun": "^1.2.2",
     "@types/mdast": "^4.0.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
     "@types/unist": "^3.0.3",
     "typescript": "^5.7.3"
   }
