--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "bun run build && wrangler pages deploy dist --project-name hopeinsource-com"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
