ci: force build

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "deploy": "bun run build && wrangler pages deploy dist --project-name hopeinsource-com"
+    "deploy": "bun run build --force && wrangler pages deploy dist --project-name hopeinsource-com"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
