--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/preact": "4.1.0",
-    "@preact/signals-core": "^1.10.0",
-    "astro": "5.10.1",
-    "preact": "^10.26.9",
-    "sharp": "^0.34.2",
-    "tailwindcss": "^4.1.10"
+    "@preact/signals-core": "^1.11.0",
+    "astro": "^5.13.2",
+    "preact": "^10.27.0",
+    "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/bun": "^1.2.17",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/bun": "^1.2.20",
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
