--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "deploy": "bun run build --force && wrangler pages deploy dist --project-name hopeinsource-com"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/preact": "4.1.0",
-    "@preact/signals-core": "^1.11.0",
-    "astro": "^5.13.2",
-    "preact": "^10.27.0",
-    "sharp": "^0.34.3",
-    "tailwindcss": "^4.1.12"
+    "@astrojs/check": "0.9.6",
+    "@astrojs/preact": "4.1.3",
+    "@preact/signals-core": "^1.12.1",
+    "astro": "5.16.4",
+    "preact": "^10.28.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.5",
-    "@tailwindcss/vite": "^4.1.12",
-    "@types/bun": "^1.2.20",
+    "@biomejs/biome": "2.3.8",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/bun": "^1.3.3",
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
-    "typescript": "^5.9.2"
+    "sharp": "^0.34.5",
+    "typescript": "^5.9.3"
   }
 }
