--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/check": "0.9.6",
     "@astrojs/preact": "4.1.3",
     "astro": "5.16.6",
+    "astro-pagefind": "^1.8.5",
     "preact": "^10.28.0",
     "tailwindcss": "^4.1.18"
   },
