--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@astrojs/check": "0.9.6",
     "@astrojs/preact": "4.1.3",
-    "astro": "5.16.6",
+    "astro": "^5.17.2",
     "gray-matter": "^4.0.3",
     "pagefind": "^1.4.0",
     "preact": "^10.28.3",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "@types/bun": "^1.3.8",
+    "@types/bun": "^1.3.9",
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
     "sharp": "^0.34.5",
