--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/bun": "^1.3.9",
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
+    "agentation": "^2.2.1",
     "sharp": "^0.34.5",
     "typescript": "^5.9.3"
   }
